rust/cube/cubeplanner/tests/snapshots/planning__filter_params_push_the_date_range_into_the_cube_sql.snap
---
source: cubeplanner/tests/planning.rs
expression: with_range.sql
---
SELECT count("orders".id) "orders__count" 
FROM  (SELECT * FROM public.orders WHERE (created_at >= $1::timestamptz AND created_at <= $2::timestamptz) AND 1 = 1
)  AS "orders"
WHERE ("orders".created_at >= $3::timestamptz AND "orders".created_at <= $4::timestamptz)
