rust/cube/cubeplanner/tests/snapshots/planning__filters_and_segments_become_parameters.snap
---
source: cubeplanner/tests/planning.rs
expression: planned.sql
---
SELECT count("orders".id) "orders__count" 
FROM  (SELECT * FROM public.orders WHERE 1 = 1 AND 1 = 1
)  AS "orders"
LEFT JOIN  public.users  AS "users" ON "orders".user_id = "users".id
WHERE ("users".city IN ($1, $2)) AND ("orders".status = 'completed')
