rust/cube/cubeplanner/tests/snapshots/planning__plans_the_planner_fixture_model.snap
---
source: cubeplanner/tests/planning.rs
expression: planned.sql
---
SELECT "visitors".source "visitors__source", date_trunc('day', ("visitors".created_at::timestamptz AT TIME ZONE 'UTC')) "visitors__created_at_day", count(COUNT(*)) "visitors__count" 
FROM  visitors  AS "visitors"
GROUP BY 1, 2
ORDER BY  3  DESC
LIMIT 25
