rust/cube/cubeplanner/tests/snapshots/planning__security_context_is_resolved_per_request.snap
---
source: cubeplanner/tests/planning.rs
expression: scoped.sql
---
SELECT count("orders".id) "orders__count" 
FROM  (SELECT * FROM public.orders WHERE 1 = 1 AND tenant_id = $1
)  AS "orders"
