rust/cube/cubeplanner/tests/snapshots/planning__sql_utils_convert_tz_uses_the_query_timezone.snap
---
source: cubeplanner/tests/planning.rs
expression: planned.sql
---
SELECT ("orders".created_at::timestamptz AT TIME ZONE 'Europe/Berlin') "orders__created_at_local", count("orders".id) "orders__count" 
FROM  (SELECT * FROM public.orders WHERE 1 = 1 AND 1 = 1
)  AS "orders"
GROUP BY 1
ORDER BY  2  DESC
